Resolve "rajout indicateurs green"